--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-	"name": "polidog/pdns",
+	"name": "polidog/quick-dns",
 	"description": "PHP DNS Server",
 	"keywords" : ["dns"],
-	"homepage" : "https://github.com/polidog/Pdns",
+	"homepage" : "https://github.com/polidog/QuickDns",
 	"license"  : "MIT",
 	"authors": [
 		{
@@ -15,6 +15,6 @@
         "php": ">=5.3.3"
     },	
     "autoload": {
-        "psr-0": {"Polidog\\Pdns": "src"}
+        "psr-0": {"Polidog\\QuickDns": "src"}
     }
 }
