--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-<<<<<<< HEAD
-/nbproject/private/
+.idea/
 nbproject/
-=======
 vendor
 composer.lock
->>>>>>> 4cf97ae8e2187be78f1d4643bc7703fb0b8844ce
